--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body style="padding-top: 50px;">    
     <div class="container">
-        <h2>Example</h2>
+        <h2>Family</h2>
         
         <ul class="thumbnails" id="gallery">
             <li class="span3">
