Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Jianjun10.github.co : jianjun10.github.co" />
+    <meta name="description" content=" Fmily :  Fmily" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Jianjun10.github.co</title>
+    <title> Fmily</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jianjun10/jianjun10.github.co">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/jianjun10/Fmily">View on GitHub</a>
 
-          <h1 id="project_title">Jianjun10.github.co</h1>
-          <h2 id="project_tagline">jianjun10.github.co</h2>
+          <h1 id="project_title"> Fmily</h1>
+          <h2 id="project_tagline"> Fmily</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jianjun10/jianjun10.github.co/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jianjun10/jianjun10.github.co/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/jianjun10/Fmily/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/jianjun10/Fmily/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Jianjun10.github.co maintained by <a href="https://github.com/jianjun10">jianjun10</a></p>
+        <p class="copyright"> Fmily maintained by <a href="https://github.com/jianjun10">jianjun10</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
